# django-styleguide-mcp

./: .gitmodules  README.md  README_new.md  llms.txt  pyproject.toml
.github/: README.md  dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  run-tests.yml  submodule-docs-update.yml
docs/: additional-resources-alternatives.md  advanced-serialization.md  apis-serializers.md  approach-1-use-drfs-default-exceptions-with-very-little-modifications.md  approach-2-hacksofts-proposed-way.md  base-model.md  beyond.md  celery.md  class-based-vs-function-based.md  configuration.md  cookbook.md  cookie-cutter.md  create-api.md  describe-how-your-api-errors-are-going-to-look-like.md  detail-api.md  django-styleguide-in-the-wild.md  django-styleguide.md  dx-developer-experience.md  error-handling.md  errors-exception-handling.md  example-class-based-service.md  example-function-based-service.md  factories.md  fetching-objects.md  handling-updates-with-a-service.md  how-exception-handling-works-in-the-context-of-drf.md  how-to-ask-a-question-or-propose-something.md  how-to-use-it.md  inspiration.md  integrations.md  know-how-to-change-the-default-exception-handling-behavior.md  list-apis.md  mcp-documentation-server.md  methods.md  models.md  modules.md  more-ideas.md  mypy-type-annotations.md  naming-convention.md  naming-conventions.md  (+17 more)
mcpdoc_split/: __init__.py  __main__.py  cli.py  main.py  splash.py
tests/: __init__.py
tests/unit_tests/: __init__.py  test_cli.py  test_imports.py  test_main.py
