[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpdoc-split"
version = "0.1.0"
description = "Split large markdown files into smaller documents with TOC generation"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "md-toc>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff",
]

[project.scripts]
mcpdoc-split = "mcpdoc_split.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/django-styleguide-mcp"
Repository = "https://github.com/yourusername/django-styleguide-mcp"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
