[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpdoc-split"
version = "0.2.1"
description = "Split large markdown files into smaller documents with TOC generation"
authors = [{name = "dmmeteo", email = "dmmeteo@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff",
]

[project.scripts]
mcpdoc-split = "mcpdoc_split.cli:main"

[project.urls]
Homepage = "https://github.com/dmmeteo/django-styleguide-mcp"
Repository = "https://github.com/dmmeteo/django-styleguide-mcp"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
